Added card for beer 4

--- a/index.html
+++ b/index.html
@@ -30,9 +30,18 @@
 				<p>baseline 3</p>
 			</div>
 			<div class="biere">
-				<a href="./html/biere-4.html">Bière 4</a>
-				<img src="./media/biere-4.png" alt="Bière 4" />
-				<p>baseline 4</p>
+				<div class="card">
+					<div class="card-image">
+						<img src="./media/biere-4.png" alt="Bière 4" />
+					  <span class="card-title">Card Title</span>
+					</div>
+					<div class="card-content center">
+						<p>Unleash the Yeast Series</p>
+					</div>
+					<div class="card-action center">
+						<a href="./html/biere-4.html" style="color:crimson">Pilsner Lager</a>
+					</div>
+				  </div>
 			</div>
 			<div class="biere">
 				<a href="./html/biere-5.html">Bière 5</a>
