--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
 					<div class="card">
 						<div class="card-image">
 							<img src="./media/biere-7.png" alt="Bière 7" />
-							<span class="card-title">Card Title</span>
 						</div>
-						<div class="card-content">
-							<p>baseline 7</p>
+						<div class="card-content center">
+							<p>Imperial Black Belgian Ale.</p>
 						</div>
-						<div class="card-action">
+						<div class="card-action center">
 							<a href="./html/biere-7.html">Bière 7</a>
 						</div>
 					</div>
