--- a/html/biere-2.html
+++ b/html/biere-2.html
@@ -14,10 +14,10 @@
         <link rel="stylesheet" href="../style/biere-2.css" />
     </head>
     <body>
-        <header>
-            <a href="../index.html"><i class="material-icons">arrow_back</i></a>
-            <h1>Trashy Blonde</h1>
-        </header>
+        <nav style="display: flex; flex-direction: row;">
+            <a href="../index.html"></a><i style="width: 20px; align-self: flex-start;" class="material-icons">arrow_back</i></a>
+            <h2>Trashy Blonde</h2>
+        </nav>
         <div class="container">
             <div class="row">
                 <div class="col s3">
