--- a/html/biere-2.html
+++ b/html/biere-2.html
@@ -23,6 +23,13 @@
                 <div class="col s3">
                     <img #beerImg src="../media/biere-2.png" alt="Photo de la bière Trashy Blonde, avec une étiquette violette et pleins de petits psssshhhh de graffitis partout sur la bouteille.">
                     <h6>You know you shouldn't</h6>    
+                    <p>
+                        <i class="material-icons">star</i>
+                        <i class="material-icons">star</i>
+                        <i class="material-icons">star</i>
+                        <i class="material-icons">star</i>
+                        <i class="material-icons">star_border</i>    
+                    </p>
                 </div>
                 <div class="col s3">
                     <p>blabla</p>
