--- a/html/biere-2.html
+++ b/html/biere-2.html
@@ -32,7 +32,25 @@
                     </p>
                 </div>
                 <div class="col s3">
-                    <p>blabla</p>
+                    <p><strong>First brewed : </strong>04/2008</p>
+                    <p><strong>PH : </strong>4.4</p>
+                    <p><strong>Attenuation : </strong>76</p>
+                    <p><strong>Boil volume : </strong>25 l</p>
+                    <p><strong>Food pairing : </strong></p>
+                    <ul>
+                        <li>Fresh crab with lemon</li>
+                        <li>Garlic butter dipping sauce</li>
+                        <li>Goats cheese salad</li>
+                        <li>Creamy lemon bar doused in powdered sugar</li>
+                    </ul>
+                    <p>
+                        <label>
+                            <input type="checkbox" checked="checked" />
+                            <span>Already drunk</span>
+                        </label>
+                    </p>
+                    <input type="date" class="datepicker">
+
                 </div>
                 <div class="col s6">
                     <table class="striped">
