feat(homepage): biere 29 card

--- a/index.html
+++ b/index.html
@@ -154,10 +154,14 @@
 				<img src="./media/biere-28.png" alt="Bière 28" />
 				<p>baseline 28</p>
 			</div>
-			<div class="biere">
-				<a href="./html/biere-29.html">Bière 29</a>
-				<img src="./media/biere-29.png" alt="Bière 29" />
-				<p>baseline 29</p>
+			<div class="biere card">
+				<div class="card-image">
+					<img src="https://images.punkapi.com/v2/29.png" alt="Bière 29" />
+				</div>
+				<div class="card-content">
+					<a href="./html/biere-29.html" class="card-title">10 Heads High</a>
+					<p>Imperial Red Ale.</p>
+				</div>
 			</div>
 		</div>
 	</body>
