--- a/html/biere-2.html
+++ b/html/biere-2.html
@@ -22,7 +22,7 @@
             <div class="row">
                 <div class="col s3">
                     <img #beerImg src="../media/biere-2.png" alt="Photo de la bière Trashy Blonde, avec une étiquette violette et pleins de petits psssshhhh de graffitis partout sur la bouteille.">
-                    <h6>You know you shouldn't</h6>    
+                    <h6>You know you shouldn't</h6>
                     <p>
                         <i class="material-icons">star</i>
                         <i class="material-icons">star</i>
@@ -54,14 +54,12 @@
                 </div>
                 <div class="col s6">
                     <table class="striped">
-                        <thead>
+                        <tbody>
                             <tr>
-                                <td>Malt</td>
+                                <td><strong>Malt</strong></td>
                                 <td></td>
                                 <td></td>
                             </tr>
-                        </thead>
-                        <tbody>
                             <tr>
                                 <td></td>
                                 <td>Maris Otter Extra Pale</td>
@@ -78,7 +76,7 @@
                                 <td>0.4kg</td>
                             </tr>
                             <tr>
-                                <td>Hops</td>
+                                <td><strong>Hops</strong></td>
                                 <td></td>
                                 <td></td>
                             </tr>
@@ -97,13 +95,36 @@
                                 <td>Motueka</td>
                                 <td>18.8g</td>
                             </tr>
+                            <tr>
+                                <td><strong>Yeast</strong></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Wyeast 1056 - American Ale™</td>
+                                <td></td>
+                            </tr>
                         </tbody>
                     </table>  
                 </div>
             </div>
-            <a class="waves-effect waves-light btn" href="biere-1.html">Précédent</a>
-            <a class="waves-effect waves-light btn" href="biere-3.html">Suivant</a>
+            <div class="row">
+                <div class="col s6">
+                    <p>A titillating, neurotic, peroxide punk of a Pale Ale. Combining attitude, style, substance, and a little bit of low self esteem for good measure; what would your mother say? The seductive lure of the sassy passion fruit hop proves too much to resist. All that is even before we get onto the fact that there are no additives, preservatives, pasteurization or strings attached. All wrapped up with the customary BrewDog bite and imaginative twist.</p>
+                    <p>Be careful not to collect too much wort from the mash. Once the sugars are all washed out there are some very unpleasant grainy tasting compounds that can be extracted into the wort.</p>
+                    <p>Sam Mason (samjbmason)</p>
+                </div>
+                <div class="col s6">
+                    <textarea id="textarea1" class="materialize-textarea" rows="13" placeholder="Description"></textarea>
+                </div>
+            </div>
+            <div class="row" style="display: flex; justify-content: center;">
+                <a class="waves-effect waves-light btn" href="biere-1.html">Précédent</a>
+                <a class="waves-effect waves-light btn" href="biere-3.html">Suivant</a>    
+            </div>
         </div>
+
         <a class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">add</i></a>
     </body>
 </html>
