--- a/html/biere-10.html
+++ b/html/biere-10.html
@@ -209,11 +209,17 @@
                         </ul>
                 </div>
 
-                <div class="col s6 offset-s2">
+                <div class="col s5 offset-s2">
                     <div class="input-field col s12">
                         <textarea id="textarea1" class="materialize-textarea"></textarea>
                         <label for="textarea1">Comment</label>
                       </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col offset-s11">
+                    <a class="offset-s5 btn-floating btn-large waves-effect waves-light blue"><i class="material-icons">add</i></a>
                 </div>
             </div>
 
@@ -229,7 +235,7 @@
         <footer class="page-footer blue">
             <div class="container">
                 <div class="row">
-                    <h5 class="white-text">Charlotte Leclère - FIL A2</h5>
+                    <h5 class="white-text center">Charlotte Leclère - FIL A2</h5>
                 </div>
             </div>
             <div class="footer-copyright">
