--- a/html/biere-2.html
+++ b/html/biere-2.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="../style/biere-2.css" />
     </head>
     <body>
-        <nav style="display: flex; flex-direction: row;">
+        <nav>
             <a href="../index.html"></a><i style="width: 20px; align-self: flex-start;" class="material-icons">arrow_back</i></a>
             <h2>Trashy Blonde</h2>
         </nav>
@@ -124,7 +124,8 @@
                 <a class="waves-effect waves-light btn" href="biere-3.html">Suivant</a>    
             </div>
         </div>
-
         <a class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">add</i></a>
+
+        <footer>Clementine Biais - FIL-A2</footer>
     </body>
 </html>
