--- a/html/biere-8.html
+++ b/html/biere-8.html
@@ -49,7 +49,7 @@
 	
 	<div class="container row">
 		<!-- Left column -->
-		<div class="col s6">
+		<div class="col s12 l6 left-col">
 			<!-- Image -->
 			<div class="col">
 				<img class="responsive-img" src="../media/biere-8.png" alt="Bière Fake Lager">
@@ -70,6 +70,10 @@
 				</li>
 			</ul>
 			
+			<p class="col s12 tagline">
+				Bohemian Pilsner.
+			</p>
+			
 			<div class="col s12 valign-wrapper">
 				<label class="black-text col"><input type="checkbox"> <span>Déjà bu</span></label>
 				<label class="picker"><input type="text" class="datepicker col" placeholder="Date de dégustation"></label>
@@ -85,10 +89,14 @@
 					<i class="material-icons">star_border</i>
 				</div>
 			</div>
+			
+			<p class="col s12">
+				Fake is the new black. Fake is where it is at. Fake Art, fake brands, fake breasts, and fake lager. We want to play our part in the ugly fallout from the Lager Dream. Say hello to Fake Lager – a zesty, floral 21st century faux masterpiece with added BrewDog bitterness.
+			</p>
 		</div>
 		
 		<!-- Right column -->
-		<div class="col s6">
+		<div class="col s12 l6">
 			<!-- Ingredients table -->
 			<table class="card-panel">
 				<thead>
