update: index title and baseline for beer 6

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 			<div class="biere">
 				<div class="card">
 					<div class="card-content center">
-						<a href="./html/biere-6.html">Bière 6</a><br>
+						<a href="./html/biere-6.html">Electric India</a><br>
 						<img src="https://images.punkapi.com/v2/6.png" alt="Bière 6" />
-						<p>baseline 6</p>
+						<p>Vibrant Hoppy Saison.</p>
 					</div>
 				</div>
 			</div>
