Fixed changes asked on pull request

--- a/html/biere-4.html
+++ b/html/biere-4.html
@@ -11,7 +11,8 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
-    <script type="text/javascript" src="./dropdown.js"></script>
+    <script type="text/javascript" src="../js/dropdown.js"></script>
+    <script type="text/javascript" src="../js/datepicker.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
@@ -30,7 +31,7 @@
             <div class="col s3">
                 <div class="container">
                     <div class="row center">
-                        <img width="300" src="../media/biere-4.png">
+                        <img width="200" src="../media/biere-4.png">
                     </div>
                     <div class="row center">
                         <b class="center">Unleash the Yeast Series.</b>
