Modification de l'index de la bière 10

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<!-- Compiled and minified JavaScript -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 		<link rel="stylesheet" href="./style/index.css" />
+		<meta charset="UTF-8">
 	</head>
 	<body>
 		<h1>Catalogue des bières</h1>
@@ -30,9 +31,18 @@
 				<p>baseline 3</p>
 			</div>
 			<div class="biere">
-				<a href="./html/biere-4.html">Bière 4</a>
-				<img src="./media/biere-4.png" alt="Bière 4" />
-				<p>baseline 4</p>
+				<div class="card">
+					<div class="card-image">
+						<img src="./media/biere-4.png" alt="Bière 4" />
+					  <span class="card-title">Card Title</span>
+					</div>
+					<div class="card-content center">
+						<p>Unleash the Yeast Series</p>
+					</div>
+					<div class="card-action center">
+						<a href="./html/biere-4.html" style="color:crimson">Pilsner Lager</a>
+					</div>
+				  </div>
 			</div>
 			<div class="biere">
 				<a href="./html/biere-5.html">Bière 5</a>
@@ -59,10 +69,14 @@
 				<img src="./media/biere-9.png" alt="Bière 9" />
 				<p>baseline 9</p>
 			</div>
-			<div class="biere">
-				<a href="./html/biere-10.html">Bière 10</a>
-				<img src="./media/biere-10.png" alt="Bière 10" />
-				<p>baseline 10</p>
+			<div class="biere card">
+				<div class="card-image">
+					<img src="https://images.punkapi.com/v2/10.png" alt="Bière 10" />
+				</div>
+				<div class="card-content">
+					<a href="./html/biere-10.html" class="card-title">Bramling X</a>
+					<p>Single Hop IPA Series - 2011.</p>
+				</div>
 			</div>
 			<div class="biere">
 				<a href="./html/biere-11.html">Bière 11</a>
@@ -154,10 +168,14 @@
 				<img src="./media/biere-28.png" alt="Bière 28" />
 				<p>baseline 28</p>
 			</div>
-			<div class="biere">
-				<a href="./html/biere-29.html">Bière 29</a>
-				<img src="./media/biere-29.png" alt="Bière 29" />
-				<p>baseline 29</p>
+			<div class="biere card">
+				<div class="card-image">
+					<img src="https://images.punkapi.com/v2/29.png" alt="Bière 29" />
+				</div>
+				<div class="card-content">
+					<a href="./html/biere-29.html" class="card-title">10 Heads High</a>
+					<p>Imperial Red Ale.</p>
+				</div>
 			</div>
 		</div>
 	</body>
