[TO REVIEW #2] Modify index of 10th beer (#32)
* Créations fichiers html et css

* Add buttons "précédent"/"suivant"

* ajout de l'image de la bière 10

* Adding table

* Adding navbar

* Adding footer

* Adding beer infos

* Adding Beer desc

* Adding textArea

* Adding + btn

* fixe responsive bugs

* Modification de l'index de la bière 10

Co-authored-by: CharlotteL <charlotte.leclere@outlook.fr>

--- a/index.html
+++ b/index.html
@@ -69,10 +69,14 @@
 				<img src="./media/biere-9.png" alt="Bière 9" />
 				<p>baseline 9</p>
 			</div>
-			<div class="biere">
-				<a href="./html/biere-10.html">Bière 10</a>
-				<img src="./media/biere-10.png" alt="Bière 10" />
-				<p>baseline 10</p>
+			<div class="biere card">
+				<div class="card-image">
+					<img src="https://images.punkapi.com/v2/10.png" alt="Bière 10" />
+				</div>
+				<div class="card-content">
+					<a href="./html/biere-10.html" class="card-title">Bramling X</a>
+					<p>Single Hop IPA Series - 2011.</p>
+				</div>
 			</div>
 			<div class="biere">
 				<a href="./html/biere-11.html">Bière 11</a>
