--- a/html/biere-11.html
+++ b/html/biere-11.html
@@ -3,7 +3,8 @@
     <head>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">  
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="../style/biere-11.css"/>
     </head>
 
     <body>
@@ -19,17 +20,28 @@
                 </div>
             </nav>
         </header>
-        <main style="margin: 100px;">
+        <main class="mainContainer">
             <div class="row">
-                <div class="col s2"><img src="https://images.punkapi.com/v2/keg.png" alt="Italian Trulli" width="200"></div>
-                <div class="col s2">
-                    <p>Roasted garlic and chilli infused camembert cheese</p>
+                <div class="col s3"><img src="https://images.punkapi.com/v2/keg.png" alt="Italian Trulli" width="250"></div>
+                <div class="col s3">
+                    <p><b>First Brewed:</b> 04/2013</p>
+                    <p><b>Ph:</b> 4.4</p>
+                    <p><b>Attenuation Level:</b> 74.7</p>
+                    <p><b>Boil Volume:</b> 25</p>
+                    <p><b>Food Pairing:</b></p>
+                    <ul class="collection">
+                        <li class="collection-item">Roasted garlic and chilli infused camembert cheese</li>
+                        <li class="collection-item">Korean style chicken wings</li>
+                        <li class="collection-item">Chocolate milk shake</li>
+                    </ul>
                     <p>
                         <label>
                         <input type="checkbox" />
                         <span>Déja bu</span>
                         </label>
                     </p>
+                    <p>Date de degustation</p>
+                    <input type="text" class="datepicker">
                 </div>
                 <div class="col s6">
                     <table>            
@@ -54,11 +66,32 @@
                           <td>Smoked Weyermann</td>
                           <td>1.8</td>
                         </tr>
+                        <tr>
+                            <td>Hops</th>
+                            <td></th>
+                            <td></th>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td>First Gold</td>
+                          <td>25</td>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td>Fuggles</td>
+                          <td>25</td>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td>Honey</td>
+                          <td>250</td>
+                        </tr>
                       </tbody>
                     </table>
                 </div>
             </div>
-            <div style="margin-bottom: 10px; margin-left: 15px;">
+            <div class="stars">
+                <p>Milk & Honey Scotch Ale.</p>
                 <i class="material-icons">star</i>
                 <i class="material-icons">star</i>
                 <i class="material-icons">star</i>
@@ -66,16 +99,24 @@
                 <i class="material-icons">star_border</i>
             </div>
             <div class="row">
-                <div class="col s3"><p>Lots of malt in this one. Mash-in in stages, and spread the pale ale malt throughout the mash to provide stability. If the mash starts to sink, stop, wait a few minutes while mixing, then start again.</p></div>
-                <div class="col s6" style="margin-left: 100px;"><textarea></textarea></div>
+                <div class="col s3">
+                    <p>Lots of malt in this one. Mash-in in stages, and spread the pale ale malt throughout the mash to provide stability. If the mash starts to sink, stop, wait a few minutes while mixing, then start again.</p>
+                    <br/>
+                    <p>Sam Mason</p>
+                </div>
+                <div class="col s9">
+                    <p>Comments:</p>
+                    <textarea class="materialize-textarea"></textarea>
+                </div>
             </div>
-            <div class="center" style="padding-bottom: 10px;">
+            <div class="center">
                 <a class="waves-effect waves-light btn-small">Précedent</a>
                 <a class="waves-effect waves-light btn-small">Suivant</a>
             </div>
+            <a class="btn-floating right btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
         </main>
         <footer class="page-footer">
-            <div class="container" style="padding-bottom: 50px;">
+            <div class="container footer">
                 <h5 class="white-text center">Valentin FIL A2</h5>
             </div>
         </footer>
