--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 				<p>baseline 17</p>
 			</div>
 			<div class="biere">
-				<a href="./html/biere-18.html">Bière 18</a>
-				<img src="./media/biere-18.png" alt="Bière 18" />
+				<a href="./html/biere-18.html">Russian Doll – India Pale Ale</a>
+				<img src="./media/biere-18.png" alt="Russian Doll – India Pale Ale" />
 				<p>Russian Doll – India Pale Ale</p>
 			</div>
 			<div class="biere">
