ajout du nom de la biere

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<p>Imperial Black Belgian Ale.</p>
 						</div>
 						<div class="card-action center">
-							<a href="./html/biere-7.html">Bière 7</a>
+							<a href="./html/biere-7.html">AB:12</a>
 						</div>
 					</div>
 				</div>
