2éme PR Card page index (#26)
* Component : Card

* indent

* indent

* indent

* inent

* indent

* indent

* style

* ajout du nom de la biere

--- a/index.html
+++ b/index.html
@@ -55,9 +55,19 @@
 				<p>baseline 6</p>
 			</div>
 			<div class="biere">
-				<a href="./html/biere-7.html">Bière 7</a>
-				<img src="./media/biere-7.png" alt="Bière 7" />
-				<p>baseline 7</p>
+				<div class="biere">
+					<div class="card">
+						<div class="card-image">
+							<img src="./media/biere-7.png" alt="Bière 7" />
+						</div>
+						<div class="card-content center">
+							<p>Imperial Black Belgian Ale.</p>
+						</div>
+						<div class="card-action center">
+							<a href="./html/biere-7.html">AB:12</a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div class="biere">
 				<a href="./html/biere-8.html">Bière 8</a>
