[TO REVIEW] Page 18 (#23)
* Rename files

* First component

* Quasi fini

* Finished, need some css

* Finished

* Update index.html

--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
 				<p>baseline 17</p>
 			</div>
 			<div class="biere">
-				<a href="./html/biere-18.html">Bière 18</a>
-				<img src="./media/biere-18.png" alt="Bière 18" />
-				<p>baseline 18</p>
+				<a href="./html/biere-18.html">Russian Doll – India Pale Ale</a>
+				<img src="./media/biere-18.png" alt="Russian Doll – India Pale Ale" />
+				<p>Russian Doll – India Pale Ale</p>
 			</div>
 			<div class="biere">
 				<a href="./html/biere-19.html">Bière 19</a>
