[TO-REVIEW] card on index (#25)
* feat: card on index

* add gitignore

* update: index title and baseline for beer 6

* fix: gitgnore

Co-authored-by: Thomas Gaubert <thomas.gaubert@edoc.fr>

--- a/index.html
+++ b/index.html
@@ -50,9 +50,13 @@
 				<p>baseline 5</p>
 			</div>
 			<div class="biere">
-				<a href="./html/biere-6.html">Bière 6</a>
-				<img src="https://images.punkapi.com/v2/6.png" alt="Bière 6" />
-				<p>baseline 6</p>
+				<div class="card">
+					<div class="card-content center">
+						<a href="./html/biere-6.html">Electric India</a><br>
+						<img src="https://images.punkapi.com/v2/6.png" alt="Bière 6" />
+						<p>Vibrant Hoppy Saison.</p>
+					</div>
+				</div>
 			</div>
 			<div class="biere">
 				<div class="biere">
